--- a/src/main/angular/src/app/components/modules/accounts/accounts.component.html
+++ b/src/main/angular/src/app/components/modules/accounts/accounts.component.html
@@ -1,1 +1,71 @@
-<p>accounts works!</p>
+<mat-toolbar class="module-toolbar" role="heading">
+    <mat-toolbar-row>
+        <span>Cuentas</span>
+        <span class="filler"></span>
+        <button mat-flat-button color="accent" aria-labelledby="Nuevo cuenta" (click)="addRow()">
+            Nuevo cuenta
+        </button>
+        <button mat-icon-button class="search-button" aria-labelledby="Busqueda" (click)="toggleSearchBar()">
+            <mat-icon>search</mat-icon>
+        </button>
+    </mat-toolbar-row>
+    <mat-toolbar-row class="search-bar" [ngClass]="{'showed-search-bar': !filter.hidden}">
+        <mat-icon class="search-icon">search</mat-icon>
+        <mat-form-field class="input-full-width next-input searchable-input" appearance="standard"
+            [hideRequiredMarker]="false" [floatLabel]="'never'">
+            <input matInput placeholder="Nombre de cuenta" [(ngModel)]="filter.entity.accountName">
+        </mat-form-field>
+        <mat-form-field class="input-full-width next-input searchable-input" appearance="standard"
+            [hideRequiredMarker]="false" [floatLabel]="'never'">
+            <input matInput placeholder="Cliente" [(ngModel)]="filter.entity.customerName">
+        </mat-form-field>
+        <mat-form-field class="input-full-width next-input searchable-input" appearance="standard"
+            [hideRequiredMarker]="false" [floatLabel]="'never'">
+            <input matInput placeholder="Responsable" [(ngModel)]="filter.entity.responsible">
+        </mat-form-field>
+        <button mat-icon-button class="search-button" aria-labelledby="Busqueda" (click)="setFilter(true)">
+            <mat-icon>search</mat-icon>
+        </button>
+        <button mat-icon-button aria-labelledby="Cerrar la busqueda" (click)="toggleSearchBar()">
+            <mat-icon>close</mat-icon>
+        </button>
+    </mat-toolbar-row>
+</mat-toolbar>
+
+<mat-card class="card-table">
+    <mat-card-content class="card-table-content">
+        <table mat-table class="full-width-table" [dataSource]="dataSource" matSort aria-label="Elements">
+            <ng-container matColumnDef="customerName">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Cliente</th>
+                <td mat-cell *matCellDef="let row">{{row.customerName}}</td>
+            </ng-container>
+            <ng-container matColumnDef="accountName">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Nombre de cuenta</th>
+                <td mat-cell *matCellDef="let row">{{row.accountName}}</td>
+            </ng-container>
+            <ng-container matColumnDef="responsible">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Responsable</th>
+                <td mat-cell *matCellDef="let row">{{row.responsible}}</td>
+            </ng-container>
+            <ng-container matColumnDef="actions">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header></th>
+                <td mat-cell *matCellDef="let row">
+                    <mat-menu #appMenu="matMenu">
+                        <button mat-menu-item (click)="showForm(row)">
+                            <mat-icon>create</mat-icon> Editar
+                        </button>
+                        <button mat-menu-item (click)="delete(row)">
+                            <mat-icon>delete</mat-icon> Eliminar
+                        </button>
+                    </mat-menu>
+                    <button mat-icon-button [matMenuTriggerFor]="appMenu">
+                        <mat-icon>more_vert</mat-icon>
+                    </button>
+                </td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
+    </mat-card-content>
+</mat-card>
