--- a/src/main/angular/src/app/components/ui/navigation/navigation.component.html
+++ b/src/main/angular/src/app/components/ui/navigation/navigation.component.html
@@ -7,7 +7,7 @@
             <p>Administrador</p>
         </span>
         <div class="filler"></div>
-        <button mat-icon-button aria-labelledby="Salir de la aplicación" (click)="goto('logout')">
+        <button mat-icon-button aria-labelledby="Salir de la aplicación" (click)="logout()">
             <mat-icon>exit_to_app</mat-icon>
         </button>
     </mat-toolbar>
